<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_violin"
            android:contentDescription="@string/the_violin" />

        <LinearLayout
            android:paddingVertical="24sp"
            android:paddingHorizontal="20sp"
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/card_violin"
                    android:contentDescription="@string/the_violin" />

            </LinearLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:paddingHorizontal="12sp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textColor="@color/grey"
                        android:text="@string/editor_choice" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:text="@string/the_violin" />
                </LinearLayout>


                <Button
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_alignParentBottom="true"
                    app:icon="@drawable/icon_play"
                    app:backgroundTint="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/play"
                    />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20sp"
                android:paddingBottom="15sp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/latest_releases" />

            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="170sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170sp"
                            android:layout_height="170sp"
                            android:src="@drawable/album1" />

                        <TextView
                            android:paddingVertical="3sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/latest1_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="@string/latest1_sub" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170sp"
                            android:layout_height="170sp"
                            android:src="@drawable/album2" />

                        <TextView
                            android:paddingVertical="3sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/latest2_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="@string/latest2_sub" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170sp"
                            android:layout_height="170sp"
                            android:src="@drawable/album1" />

                        <TextView
                            android:paddingVertical="3sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/latest1_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="@string/latest1_sub" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170sp"
                            android:layout_height="170sp"
                            android:src="@drawable/album2" />

                        <TextView
                            android:paddingVertical="3sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/latest2_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/grey"
                            android:text="@string/latest2_sub" />

                    </LinearLayout>


                </LinearLayout>


            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20sp"
                android:paddingBottom="15sp"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/popular_artists" />

            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="130sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130sp"
                            android:layout_height="130sp"
                            android:src="@drawable/artist1" />

                        <TextView
                            android:paddingVertical="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/artist1_title" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="130sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130sp"
                            android:layout_height="130sp"
                            android:src="@drawable/artist2" />

                        <TextView
                            android:paddingVertical="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/artist2_title" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="130sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130sp"
                            android:layout_height="130sp"
                            android:src="@drawable/artist3" />

                        <TextView
                            android:paddingVertical="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/artist3_title" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="130sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130sp"
                            android:layout_height="130sp"
                            android:src="@drawable/artist1" />

                        <TextView
                            android:paddingVertical="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:text="@string/artist1_title" />

                    </LinearLayout>

                </LinearLayout>


            </HorizontalScrollView>

        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/about_violin" />

            <TextView
                android:layout_below="@id/tv_header"
                android:paddingTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/about_violin_desc" />

            <TextView
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/more" />

        </RelativeLayout>

        <LinearLayout
            android:paddingHorizontal="22sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/other_string" />

            <LinearLayout
                android:paddingTop="15sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100sp">

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:paddingEnd="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cello" />

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:paddingStart="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/guitar" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100sp">

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:paddingEnd="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/viola" />

                <ImageView
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:paddingStart="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gamba" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

